--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             left: 0;
             z-index: -1; /* Ensure particles are behind other elements */
         }
-
+        * {
+            overflow: hidden;
+        }
     </style>
 </head>
 
