--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
         </div>
       </div>
 
+        <div data-aos="flip-up" data-aos-duration="2000" class="flex flex-col items-center">
+        <img src="THM-ULB9Z7POIZ.png" alt="TestOut CyberDefense Pro" class="max-w-full h-auto rounded-lg">
+        <div class="mt-4 text-center md:text-left">
+          <h3 class="text-black text-xl font-bold">TestOut CyberDefense</h3>
+          <p class="text-gray-700 text-base">The course is designed to facilitate the transition of students and IT professionals into the cybersecurity field. It covers key areas such as understanding proactive threat intelligence for managing security and vulnerability activities, implementing security solutions for infrastructure management, compliance with security concepts for risk mitigation, analyzing security monitoring data for enhancing security measures, and employing appropriate incident response procedures including basic digital forensics techniques.</p>
+        </div>
+      </div>
+
       <div data-aos="flip-up" data-aos-duration="2000" class="flex flex-col items-center">
         <img src="THM-ULB9Z7POIZ.png" alt="TestOut ITF Pro" class="max-w-full h-auto rounded-lg">
         <div class="mt-4 text-center md:text-left">
