--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
 
         <div data-aos="flip-up" data-aos-duration="2000" class="flex flex-col items-center">
-        <img src="Cyberdefense TestOut.pdf" alt="TestOut CyberDefense Pro" class="max-w-full h-auto rounded-lg">
+        <img src="Cyberdefense.pdf" alt="TestOut CyberDefense Pro" class="max-w-full h-auto rounded-lg">
         <div class="mt-4 text-center md:text-left">
           <h3 class="text-black text-xl font-bold">TestOut CyberDefense Pro</h3>
           <p class="text-gray-700 text-base">The TestOut CyberDefense Pro course is designed to facilitate the transition of students and IT professionals into the cybersecurity field. It covers key areas such as understanding proactive threat intelligence for managing security and vulnerability activities, implementing security solutions for infrastructure management, compliance with security concepts for risk mitigation, analyzing security monitoring data for enhancing security measures, and employing appropriate incident response procedures including basic digital forensics techniques.</p>
