--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 
-<body class="bg-white m-0 p-0 h-full">
+<body class="bg-zinc-900 m-0 p-0 h-full">
     <!-- This is the beginning of my nav bar -->
     <nav class="bg-gray-900 p-4 z-50 fixed w-full">
         <div class="container mx-auto flex items-center justify-between">
