--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <div id="particles-js"></div> <!-- Move particles container outside of flex container -->
     <div id="home" class="flex flex-col justify-center items-center h-screen">
         <h1 class="text-4xl font-bold text-center mb-4">Welcome to My Portfolio</h1>
-        <p class="text-lg text-gray-700 text-center mb-8">Discover my Accomplishments and Experiences.</p>
-        <a href="#about" class="bg-gray-900 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">Get Started</a>
+        <p class="text-lg text-white text-center mb-8">Discover my Accomplishments and Experiences.</p>
+        <a href="#about" class="bg-slate-300 hover:bg-white text-black font-bold py-2 px-4 rounded">Get Started</a>
     </div>
 
      <!--About Me Section-->
-  <section data-aos="fade-right" data-aos-duration="2000" id="about" class="bg-white bg-opacity-5 backdrop-blur-md border-2 border-gray-300 rounded-lg px-8 py-8 text-white text-center max-w-7xl mx-auto flex flex-col lg:flex-row items-center space-y-6 lg:space-y-0 lg:space-x-6">
+  <section data-aos="fade-right" data-aos-duration="2000" id="about" class="bg-zinc-900 bg-opacity-5 backdrop-blur-md border-2 border-gray-300 rounded-lg px-8 py-8 text-white text-center max-w-7xl mx-auto flex flex-col lg:flex-row items-center space-y-6 lg:space-y-0 lg:space-x-6">
     <!-- Professional Photo on the left -->
     <!-- Change the src image to your professional photo either through a file path or a URL -->
     <img src="IMG_2538.JPG" alt="Professional Photo" class="w-full lg:w-80 h-96 lg:h-160 object-contain rounded-xl mb-4 lg:mb-0">
