--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 
-<body class="bg-zinc-900 m-0 p-0 h-full">
+<body class="bg-black m-0 p-0 h-full">
     <!-- This is the beginning of my nav bar -->
     <nav class="bg-gray-900 p-4 z-50 fixed w-full">
         <div class="container mx-auto flex items-center justify-between">
@@ -41,7 +41,7 @@
     <!-- This is the ending of my navbar -->
     <div id="particles-js"></div> <!-- Move particles container outside of flex container -->
     <div id="home" class="flex flex-col justify-center items-center h-screen">
-        <h1 class="text-4xl font-bold text-center mb-4">Welcome to My Portfolio</h1>
+        <h1 class="text-4xl text-white font-bold text-center mb-4">Welcome to My Portfolio</h1>
         <p class="text-lg text-white text-center mb-8">Discover my Accomplishments and Experiences.</p>
         <a href="#about" class="bg-slate-300 hover:bg-white text-black font-bold py-2 px-4 rounded">Get Started</a>
     </div>
