--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             left: 0;
             z-index: 0; /* Ensure particles are behind other elements */
         }
+
+        a {
+            z-index: 1;
+        }
     </style>
 </head>
 
