--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
         
         <!-- Download Links -->
       <div class="bg-slate-300">
-        <div class="my-4">
+        <div class="my-4 z-20">
           <!-- Resume -->
             <a href="resumeOct2023.docx" class="flex justify-center items-center bg-gray-900 hover:bg-gray-700 text-white font-bold py-2 px-4 text-sm mb-2 md:mb-4">Download Resume</a>
         </div>
         <!-- Cover Letter -->
-        <div class="my-4">
+        <div class="my-4 z-20">
             <a href="cover letter.docx" class="flex justify-center items-center bg-gray-900 hover:bg-gray-700 text-white font-bold py-2 px-4 text-sm mb-2 md:mb-4">Download Cover Letter</a>
         </div>
         <!-- Business Cards -->
-        <div class="my-4">
+        <div class="my-4 z-20">
           <a href="business cards.doc" class="flex justify-center items-center bg-gray-900 hover:bg-gray-700 text-white font-bold py-2 px-4 text-sm mb-2 md:mb-4">Download Business Cards</a>
       </div>
     </div>
