--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
   </section>
 
   <div class="m-4 flex justify-center items-center min-h-screen">
-    <section id="downloads" class="bg-slate-300 p-6 rounded-lg shadow-lg md:w-1/2 lg:w-1/3">
+    <section id="downloads" class="bg-gray-700 p-6 rounded-lg shadow-lg md:w-1/2 lg:w-1/3">
         <!-- Page Heading -->
         <h1 class="text-2xl font-bold mb-4">My Resume and Cover Letter</h1>
         
         <!-- Download Links -->
-      <div class="bg-gray-800">
+      <div class="bg-gray-700">
         <div class="my-4 z-20">
           <!-- Resume -->
             <a href="resumeOct2023.docx" class="flex justify-center items-center bg-gray-900 hover:bg-gray-700 text-white font-bold py-2 px-4 text-sm mb-2 md:mb-4">Download Resume</a>
