--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
      <!--About Me Section-->
-  <section data-aos="fade-right" data-aos-duration="2000" id="about" class="bg-white bg-opacity-5 backdrop-blur-md border-2 border-gray-300 rounded-lg px-8 py-8 text-white text-center max-w-7xl mx-auto flex flex-col lg:flex-row items-center space-y-6 lg:space-y-0 lg:space-x-6">
+  <section data-aos="fade-right" data-aos-duration="2000" id="about" class="bg-opacity-5 backdrop-blur-md border-2 border-gray-300 rounded-lg px-8 py-8 text-white text-center max-w-7xl mx-auto flex flex-col lg:flex-row items-center space-y-6 lg:space-y-0 lg:space-x-6">
     <!-- Professional Photo on the left -->
     <!-- Change the src image to your professional photo either through a file path or a URL -->
     <img src="IMG_2538.JPG" alt="Professional Photo" class="w-full lg:w-80 h-96 lg:h-160 object-contain rounded-xl mb-4 lg:mb-0">
