--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div class="m-4 flex justify-center items-center min-h-screen">
     <section id="downloads" class="bg-gray-700 p-6 rounded-lg shadow-lg md:w-1/2 lg:w-1/3">
         <!-- Page Heading -->
-        <h1 class="text-2xl font-bold mb-4">My Resume and Cover Letter</h1>
+        <h1 class="text-2xl font-bold mb-4 text-center text-white">My Resume and Cover Letter</h1>
         
         <!-- Download Links -->
       <div class="bg-gray-700">
