--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <h1 class="text-white">Isaacs Portfolio</h1>
             </div>
             <div class="flex space-x-4">
-                <a data-aos="fade-up" data-aos-duration="500" href="#home" class="text-red-500 text-sm md:text-base">Home</a>
-                <a data-aos="fade-up" data-aos-duration="750" href="#about" class="text-red-500 text-sm md:text-base">About</a>
-                <a data-aos="fade-up" data-aos-duration="1000" href="#certifications" class="text-red-500 text-sm md:text-base">Certifications</a>
-                <a data-aos="fade-up" data-aos-duration="1250" href="#downloads" class="text-red-500 text-sm md:text-base">Downloads</a>
-                <a data-aos="fade-up" data-aos-duration="1500" href="#contact" class="text-red-500 text-sm md:text-base">Contact</a>
+                <a data-aos="fade-up" data-aos-duration="500" href="#home" class="text-sm md:text-base text-red-500">Home</a>
+                <a data-aos="fade-up" data-aos-duration="750" href="#about" class="text-sm md:text-base text-red-500">About</a>
+                <a data-aos="fade-up" data-aos-duration="1000" href="#certifications" class="text-sm md:text-base text-red-500">Certifications</a>
+                <a data-aos="fade-up" data-aos-duration="1250" href="#downloads" class="text-sm md:text-base text-red-500">Downloads</a>
+                <a data-aos="fade-up" data-aos-duration="1500" href="#contact" class="text-sm md:text-base text-red-500">Contact</a>
             </div>
         </div>
     </nav>
