--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </div>
 
       <div data-aos="flip-up" data-aos-duration="2000" class="flex flex-col items-center">
-        <img src="THM-ULB9Z7POIZ.png" alt="TestOut ITF Pro" class="max-w-full h-auto rounded-lg">
+        <img src="introcybersec.png" alt="TestOut ITF Pro" class="max-w-full h-auto rounded-lg">
         <div class="mt-4 text-center md:text-left">
           <h3 class="text-black text-xl font-bold">TryHackMe Introduction to Cyber Security</h3>
           <p class="text-white text-base">Navigating the vast landscape of Cyber Security can be daunting, but this pathway offers a hands-on introduction to various domains, covering topics such as careers in cybersecurity, offensive security by hacking applications, defensive security against live cyber attacks, and exploring industry-related security topics.</p>
