--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
       <!-- Contact Info Card 2 -->
       <div data-aos="fade-up" data-aos-duration="2000"  class="bg-gray-700 p-4 rounded-lg shadow-md">
         <h3 class="text-xl font-semibold text-white mb-2">Phone</h3>
-        <p class="text-white">(814)-521-2248</p>
+        <p class="text-white">(814)-xxx-xxxx</p>
       </div>
       
       <!-- Contact Info Card 3 -->
       <div data-aos="fade-up" data-aos-duration="2000" class="bg-gray-700 p-4 rounded-lg shadow-md">
         <h3 class="text-xl font-semibold text-white mb-2">Address</h3>
-        <p class="text-white">332 West Race Street, Somerset Pennsylvania</p>
+        <p class="text-white">xxxxxxxxx, Somerset Pennsylvania</p>
       </div>
     </div>
   </div>
