--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div data-aos="fade-left" data-aos-duration="2000" class="bg-white p-4 rounded-lg shadow-md bg-opacity-5 backdrop-blur-md">
           <h3 class="text-xl font-semibold text-white mb-2">SkillsUSA Silver Medalist in Internetworking</h3>
-          <p class="text-white">Saw a flaw in the current sign-in sign-out system at my technical school and made a web solution that solved the problem</p>
+          <p class="text-white">Placed in my CTC's SkillsUSA Chapter for Internetworking at the District Level.</p>
         </div>
         <div data-aos="fade-left" data-aos-duration="2500" class="bg-white p-4 rounded-lg shadow-md bg-opacity-5 backdrop-blur-md">
           <h3 class="text-xl font-semibold text-white mb-2">FBLA 2023-2024 State Qualifier</h3>
