--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <div class="bg-gray-800">
         <div class="my-4 z-20">
           <!-- Resume -->
-            <a href="resumeOct2023.docx" class="flex justify-center items-center bg-gray-900 hover:bg-gray-700 text-white font-bold py-2 px-4 text-sm mb-2 md:mb-4">Download Resume</a>
+            <a href="Cyber Resume.pdf" class="flex justify-center items-center bg-gray-900 hover:bg-gray-700 text-white font-bold py-2 px-4 text-sm mb-2 md:mb-4">Download Resume</a>
         </div>
         <!-- Cover Letter -->
         <div class="my-4 z-20">
